--- a/html/style/sass/group/_groupCreate.scss
+++ b/html/style/sass/group/_groupCreate.scss
@@ -1,100 +1,240 @@
+// #CreateGroup{
 
-.CreerButton{
-    @include buttonPrimary(219px);
-    margin-top: 12px;
-}
-.AnnulerButton{
-    @include buttonInput(219px);
-    display: flex;
-    margin-top: 8px;
-}
-
-
-#nameGroup{
-    height: 30px;
-    display: flex;
-    margin-top: 10px;
-}
-
-.form-nameGroup{
-    margin-top: 18px;
+//     .CreateButton{
+//         @include buttonPrimary(219px);
+//         margin-top: 12px;
+//     }
+//     .CancelButton{
+//         @include buttonInput(219px);
+//         display: flex;
+//         margin-top: 8px;
+//     }
     
-}
-
-#memberName{
-    height: 30px;
-    display: flex;
-    margin-top: 10px;
     
-}
-
-.form-nameMember{
-    margin-top: 25px;
+//     #nameGroup{
+//         height: 30px;
+//         display: flex;
+//         margin-top: 10px;
+//     }
     
-}
-
-
-.form-CreateGroup{
-    display: flex;
-    flex-direction: column;
-
-}
-
-
-.form-CreateGroup input {
-    width: 100%;
-}
-
-.buttons{
-    margin-top: 10px;
-}
-
-
-
-
-
-
-@media (min-width:1000px){
-    .formul{
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 25px;
-
-    }
-
-    .buttons{
-        display: flex;
-        flex-direction: row;
-    }
+//     .form-nameGroup{
+//         margin-top: 18px;
+        
+//     }
     
-    .AnnulerButton{
+//     #memberName{
+//         height: 30px;
+//         display: flex;
+//         margin-top: 10px;
+        
+//     }
+    
+//     .form-nameMember{
+//         margin-top: 25px;
+        
+//     }
+    
+    
+//     .form-CreateGroup{
+//         display: flex;
+//         flex-direction: column;
+    
+//     }
+    
+    
+//     .form-CreateGroup input {
+//         width: 100%;
+//     }
+    
+//     .buttons{
+//         margin-top: 10px;
+//     }
+
+//     #info{
+//         margin-bottom: 20px;
+//     }
+    
+    
+    
+    
+    
+    
+//     @media (min-width:1000px){
+//         .formul{
+//             display: flex;
+//             flex-direction: row;
+//             margin-bottom: 25px;
+    
+//         }
+    
+//         .buttons{
+//             display: flex;
+//             flex-direction: row;
+//         }
+        
+//         .CancelButton{
+//             width: 150px;
+//             margin-top: 0;
+//             margin-left: 30px;
+//         }
+//         .CreateButton{
+//             width: 150px;
+//             margin-top: 0;
+//         }
+//         // .CancelButton{
+//         //     margin-top: 12px;
+//         //     margin-left: 30px;
+//         // }
+    
+
+    
+//         h3{
+//             font-weight: bold;
+//         }
+    
+//         h2{
+//             margin-bottom: 50px;
+//         }
+
+//         .form-nameGroup{
+//             width: 50%;
+//             margin-right: 30px;
+//         }
+    
+//         .form-nameMember{
+//             width: 50%;
+//             margin-top: 18px;
+//         }
+
+//         .form-CreateGroup{
+//             display: flex;
+//             align-items: center;
+//             // height: 1000px;
+//         }
+    
+    
+//     } 
+// }
+
+
+#CreateGroup{
+
+
+    .CreateButton{
+        @include buttonPrimary(219px);
         margin-top: 12px;
-        margin-left: 30px;
     }
-
+    .CancelButton{
+        @include buttonInput(219px);
+        display: flex;
+        margin-top: 8px;
+    }
+    
+    
+    #nameGroup{
+        height: 30px;
+        display: flex;
+        margin-top: 10px;
+    }
+    
     .form-nameGroup{
-        width: 503px;
-        margin-right: 30px;
-    }
-
-    .form-nameMember{
-        width: 503px;
         margin-top: 18px;
+        
     }
-
-    h3{
-        font-weight: bold;
+    
+    #memberName{
+        height: 30px;
+        display: flex;
+        margin-top: 10px;
+        
     }
-
-    h2{
-        margin-bottom: 50px;
+    
+    .form-nameMember{
+        margin-top: 25px;
+        
     }
-
+    
+    
     .form-CreateGroup{
         display: flex;
-        align-items: center;
-        // height: 1000px;
+        flex-direction: column;
+    
     }
+    
+    
+    .form-CreateGroup input {
+        width: 100%;
+    }
+    
+    .buttons{
+        margin-top: 10px;
+    }
+    
 
-
-} 
+    #info{
+        margin-bottom: 20px;
+    }
+    
+    
+    
+    
+    @media (min-width:1000px){
+        .formul{
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 25px;
+            width: 100%;
+        }
+    
+        .buttons{
+            display: flex;
+            flex-direction: row;
+        }
+        
+        .CancelButton{
+            margin-top: 12px;
+            margin-left: 30px;
+        }
+    
+        .form-nameGroup{
+            width: 50%;
+            margin-right: 30px;
+        }
+    
+        .form-nameMember{
+            width: 50%;
+            margin-top: 18px;
+        }
+    
+        h3{
+            font-weight: bold;        
+            // margin-left: 100px;
+        }
+    
+        h2{
+            margin-bottom: 50px;
+        }
+    
+        .form-CreateGroup{
+            display: flex;
+            align-items: center;
+            width: 500px;
+        }
+    
+        .header{
+            // margin-left: 100px;
+            display: flex;
+            flex-direction: row;
+        }
+    
+        .CreateButton{
+            width: 150px;
+        }
+    
+    
+        .CancelButton{
+            width: 150px;
+        }
+    
+    } 
+}
