--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -284,7 +284,7 @@ nav {
   justify-content: center;
   gap: 1em; }
 
-.about div div a, .about div div button {
+.about div div a {
   width: 50%;
   height: 30px;
   display: flex;
@@ -322,21 +322,6 @@ nav {
     margin-top: 0;
     text-align: end;
     flex-basis: 50%;
-    white-space: nowrap; }
-
-  .about div div a, .about div div button {
-    width: 50%;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    background-color: #0B162C;
-    color: #F4F4F4; } }
+    white-space: nowrap; } }
 
 /*# sourceMappingURL=main.css.map */
