--- a/html/style/sass/about/_aboutView.scss
+++ b/html/style/sass/about/_aboutView.scss
@@ -7,7 +7,7 @@
     gap: 1em;
 }
 
-.about div div a, .about div div button {
+.about div div a{
     @include buttonPrimary(50%);
 }
 
@@ -41,10 +41,6 @@
         text-align: end;
         flex-basis: 50%;
         white-space: nowrap;
-    }
-
-    .about div div a, .about div div button {
-        @include buttonPrimary(50%);
     }
 
 }
