--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -79,6 +79,7 @@ h3 {
 p {
   font-size: 16px;
   font-weight: 400;
+  line-height: 22px;
 }
 
 .p-secondary {
@@ -117,6 +118,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 20px 5%;
+  z-index: 1;
 }
 nav h3 {
   color: #16CFE9;
@@ -335,10 +337,11 @@ nav.active .list-items h2 {
   text-align: center;
 }
 
-#pictureView-container {
+#picture {
+  z-index: 0;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 75px 0px;
 }
 
@@ -347,10 +350,10 @@ nav.active .list-items h2 {
   flex-wrap: wrap;
   gap: 25px 50px;
 }
-#picture-header #picture {
-  position: relative;
+#picture-header #pic {
   width: 100%;
-  max-width: 1100px;
+  max-width: 1180px;
+  height: auto;
   border-radius: 4px;
 }
 #picture-header #picture-infos {
@@ -365,6 +368,11 @@ nav.active .list-items h2 {
   gap: 10px 0px;
 }
 
+#comments {
+  display: flex;
+  flex-direction: column;
+  gap: 45px 0px;
+}
 #comments #comments-header {
   display: flex;
   align-items: center;
@@ -387,7 +395,35 @@ nav.active .list-items h2 {
   color: #F4F4F4;
   cursor: pointer;
 }
+#comments #comments-list {
+  display: flex;
+  flex-direction: column;
+  gap: 25px 0px;
+}
+#comments #comments-list .comment {
+  display: flex;
+  background-color: #D9D9D9;
+  color: #0B162C;
+  padding: 45px;
+  border-radius: 4px;
+  gap: 0px 25px;
+}
+#comments #comments-list .comment div {
+  display: flex;
+  flex-direction: column;
+}
+#comments #comments-list .comment div .author-pfp {
+  width: 90px;
+  height: 90px;
+  background-color: red;
+  border-radius: 100%;
+}
 
+@media screen and (min-width: 1180px) {
+  #picture {
+    padding: 45px;
+  }
+}
 #galery-list {
   overflow-x: scroll;
   border: 3px solid green;
