--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -79,7 +79,7 @@ input {
   padding: 10px;
   font-size: 14px;
   font-weight: 400;
-  max-width: 190px;
+  width: 190px;
   color: #0B162C; }
 
 section {
@@ -276,6 +276,84 @@ nav {
         padding: 30px;
         text-align: center; }
 
+
+.login > * {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 10px 0 20px 0; }
+
+.login h2 {
+  margin-top: 4em;
+  text-align: center; }
+
+#connexion {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4; }
+
+.login a {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C; }
+
+.regist div {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box; }
+
+.regist h2 {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  text-align: center; }
+
+.regist input {
+  margin-bottom: 2em;
+  width: 100%; }
+
+.regist div div {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box; }
+
+#inscription {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-bottom: 1em; }
+
+.regist a {
+  width: 100%;
 .about div {
   display: flex;
   flex-direction: column;
@@ -296,6 +374,30 @@ nav {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C; }
+
+@media screen and (min-width: 500px) {
+  .regist div div {
+    flex-direction: row; }
+
+  .regist div div div {
+    white-space: nowrap; }
+
+  .regist div div div {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%; }
+
+  .regist div div div:nth-child(2n+1) {
+    margin-right: 3em; }
+
+  .regist div div:nth-child(4) {
+    display: flex;
+    flex-direction: column; }
+
+  #inscription, .regist div div a {
+    width: 100%; } }
   background-color: #0B162C;
   color: #F4F4F4; }
 
