Set button submit disabled
Set button disabled if the user try to upload more than 4 files OR if he didn't send a file

--- a/html/style/sass/gallery/_galleryCreate.scss
+++ b/html/style/sass/gallery/_galleryCreate.scss
@@ -46,12 +46,23 @@ article {
                     }
                 }
 
+                label[for="images-list"]{
+                    &~span{
+                        font-size: 12px
+                    }
+                }
                 .images-list{
                     width: 100%;
                     display: flex;
                     flex-wrap: wrap;
                     gap: 10px;
                     margin-top: 10px;
+
+                    &>p{
+                        width: 100%;
+                        text-align: center;
+                        font-size: 12px;
+                    }
 
                     .image-file{
                         display: flex;
@@ -75,7 +86,7 @@ article {
                         .image-actions{
                             width: 40px;
                             display: flex;
-                            justify-content: space-between;
+                            justify-content: flex-end;
                             i{
                                 font-size: 18px;
                                 cursor: pointer;
@@ -105,6 +116,14 @@ article {
                 button{
                     @include buttonPrimary(100%);
                     margin-bottom: 10px;
+                    cursor: pointer;
+                    transition: opacity 0.2s ease-in-out;
+                    
+                    &[disabled]{
+                        opacity: 40%;
+                        color: darken($color-contrastWhite, 20%);
+                        cursor: not-allowed;
+                    }
                 }
 
                 a{
