--- a/html/style/sass/components/_navbar.scss
+++ b/html/style/sass/components/_navbar.scss
@@ -159,6 +159,8 @@ nav {
         display: flex;
         flex-direction: column;
 
+        z-index: 9999;
+
         &>i[class="bi bi-list"]{
             display: none;
         }
