--- a/html/style/sass/profile/_profileView.scss
+++ b/html/style/sass/profile/_profileView.scss
@@ -1,7 +1,11 @@
+#profile{
+    display: flex;
+    flex-direction: column;
+    gap: 25px 0px;
+}
+
 #galery-list{
     overflow-x: scroll;
-
-    border: 3px solid green;
     padding: 10px;
     
     display: flex;
