--- a/html/style/sass/gallery/_galleryCreate.scss
+++ b/html/style/sass/gallery/_galleryCreate.scss
@@ -6,13 +6,73 @@ article {
         align-items: center;
 
         form{
-            width: 100%;
-            max-width: 280px;
+            width: 90%;
+            max-width: 800px;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 20px;
             margin-top: 20px;
+
+
+            &>div:first-child {
+                @media screen and (min-width: 768px) {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    width: 100%;
+                    gap: 20px;
+
+                    .group{
+                        width: 100%;
+                        max-width: 50%;
+                    }
+
+                    .images-list{
+                        background-color: $color-contrastBlack;
+                        border-radius: 4px;
+                        max-height: 221px;
+
+                        overflow-y: auto;
+
+                        padding: 10px 15px;
+                        color: $color-contrastWhite;
+
+                        .image-file{
+                            color: $color-contrastBlack;
+                            height: 50px;
+
+                            img{
+                                display: block;
+                                height: 100%;
+                                aspect-ratio: 1/1;
+                                object-fit: cover;
+                                border-radius: 4px;
+                            }
+                        }
+
+                    }
+                    .modal.active .card .body{
+                        img{
+                            display: block;
+                            max-width: 100%;
+                            max-height: 300px;
+                            object-fit: scale-down;
+                            border-radius: 4px;
+                        }
+                    }
+
+                    
+                }
+
+                width: 100%;
+
+                .group{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+                }
+            }
 
             .form-group{
                 width: 100%;
@@ -77,6 +137,10 @@ article {
                         background: $color-input;
                         border-radius: 4px;
                         gap: 10px;
+
+                        img{
+                            display: none;
+                        }
 
                         p {
                             flex-grow: 1;
