--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -337,6 +337,53 @@ nav.active .list-items h2 {
   text-align: center;
 }
 
+#newComment {
+  width: 100%;
+  max-width: 1500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px 0px;
+  background-color: #D9D9D9;
+  color: #0B162C;
+  padding: 25px;
+  border-radius: 4px;
+}
+#newComment form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px 0px;
+}
+#newComment form div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
+#newComment form div textarea {
+  background-color: aquamarine;
+  height: 50px;
+}
+#newComment form button {
+  width: 125px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+}
+#newComment form button:hover {
+  cursor: pointer;
+}
+
 .about div {
   display: flex;
   flex-direction: column;
@@ -578,6 +625,7 @@ nav.active .list-items h2 {
   gap: 25px 0px;
 }
 #comments #comments-list .comment {
+  width: 100%;
   max-width: 1500px;
   display: flex;
   flex-direction: column;
