--- a/html/style/sass/image/_imageView.scss
+++ b/html/style/sass/image/_imageView.scss
@@ -58,7 +58,8 @@
 
 
         .comment{
-            max-width: 1500px ;
+            width: 100%;
+            max-width: 1500px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -80,7 +81,7 @@
                     background-color: $color-contrastBlack;
                     border-radius: 100%;
                 }
-            }
+            }   
         }
     }
 }
