--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -76,7 +76,7 @@ h3 {
   font-weight: 500;
 }
 
-p {
+p, textarea {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -340,9 +340,6 @@ nav.active .list-items h2 {
 #newComment {
   width: 100%;
   max-width: 1500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 25px 0px;
   background-color: #D9D9D9;
   color: #0B162C;
@@ -353,17 +350,25 @@ nav.active .list-items h2 {
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 25px 0px;
 }
 #newComment form div {
   width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
-  max-width: 100%;
+  gap: 15px 0px;
 }
 #newComment form div textarea {
-  background-color: aquamarine;
-  height: 50px;
+  background-color: #F4F4F4;
+  height: 125px;
+  resize: vertical;
+  border: 2px solid #0B162C;
+  border-radius: 4px;
+}
+#newComment form div textarea:focus {
+  outline: 0;
 }
 #newComment form button {
   width: 125px;
