create action to add/delete member

--- a/html/style/sass/gallery/_galleryModify.scss
+++ b/html/style/sass/gallery/_galleryModify.scss
@@ -61,6 +61,7 @@
                         i{
                             font-size: 18px;
                             color:  $color-contrastBlack;
+                            cursor: pointer;
                         }
                         i[class="bi bi-x-lg"]{
                             color: $color-red;
