--- a/html/style/sass/group/_groupCreate.scss
+++ b/html/style/sass/group/_groupCreate.scss
@@ -1,131 +1,11 @@
-// #CreateGroup{
-
-//     .CreateButton{
-//         @include buttonPrimary(219px);
-//         margin-top: 12px;
-//     }
-//     .CancelButton{
-//         @include buttonInput(219px);
-//         display: flex;
-//         margin-top: 8px;
-//     }
-    
-    
-//     #nameGroup{
-//         height: 30px;
-//         display: flex;
-//         margin-top: 10px;
-//     }
-    
-//     .form-nameGroup{
-//         margin-top: 18px;
-        
-//     }
-    
-//     #memberName{
-//         height: 30px;
-//         display: flex;
-//         margin-top: 10px;
-        
-//     }
-    
-//     .form-nameMember{
-//         margin-top: 25px;
-        
-//     }
-    
-    
-//     .form-CreateGroup{
-//         display: flex;
-//         flex-direction: column;
-    
-//     }
-    
-    
-//     .form-CreateGroup input {
-//         width: 100%;
-//     }
-    
-//     .buttons{
-//         margin-top: 10px;
-//     }
-
-//     #info{
-//         margin-bottom: 20px;
-//     }
-    
-    
-    
-    
-    
-    
-//     @media (min-width:1000px){
-//         .formul{
-//             display: flex;
-//             flex-direction: row;
-//             margin-bottom: 25px;
-    
-//         }
-    
-//         .buttons{
-//             display: flex;
-//             flex-direction: row;
-//         }
-        
-//         .CancelButton{
-//             width: 150px;
-//             margin-top: 0;
-//             margin-left: 30px;
-//         }
-//         .CreateButton{
-//             width: 150px;
-//             margin-top: 0;
-//         }
-//         // .CancelButton{
-//         //     margin-top: 12px;
-//         //     margin-left: 30px;
-//         // }
-    
-
-    
-//         h3{
-//             font-weight: bold;
-//         }
-    
-//         h2{
-//             margin-bottom: 50px;
-//         }
-
-//         .form-nameGroup{
-//             width: 50%;
-//             margin-right: 30px;
-//         }
-    
-//         .form-nameMember{
-//             width: 50%;
-//             margin-top: 18px;
-//         }
-
-//         .form-CreateGroup{
-//             display: flex;
-//             align-items: center;
-//             // height: 1000px;
-//         }
-    
-    
-//     } 
-// }
-
-
 #CreateGroup{
 
-
     .CreateButton{
-        @include buttonPrimary(219px);
-        margin-top: 12px;
+        @include buttonPrimary(220px);
+        margin-top: 22px;
     }
     .CancelButton{
-        @include buttonInput(219px);
+        @include buttonInput(220px);
         display: flex;
         margin-top: 8px;
     }
@@ -158,16 +38,22 @@
     .form-CreateGroup{
         display: flex;
         flex-direction: column;
+        margin: auto;
     
     }
     
-    
+    .formul{
+        margin: auto;
+    }
+
+
     .form-CreateGroup input {
-        width: 100%;
+        width: 219px;
     }
     
     .buttons{
         margin-top: 10px;
+        margin: auto;
     }
     
 
@@ -175,25 +61,40 @@
         margin-bottom: 20px;
     }
     
-    
-    
+   h2, h3{
+        text-align: center;
+   } 
+
+   .form-role label{
+        margin-top: 25px;
+        margin-bottom: 10px;
+   }
+
+   .form-role{
+    display: flex;
+    flex-direction: column;
+
+   }
     
     @media (min-width:1000px){
         .formul{
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             margin-bottom: 25px;
             width: 100%;
+
         }
     
         .buttons{
             display: flex;
             flex-direction: row;
+            margin-top: 30px;
         }
         
         .CancelButton{
-            margin-top: 12px;
+            // margin-top: 12px;
             margin-left: 30px;
+            margin-top: 0;
         }
     
         .form-nameGroup{
@@ -203,12 +104,11 @@
     
         .form-nameMember{
             width: 50%;
-            margin-top: 18px;
+            margin-left: 15px;
         }
     
         h3{
-            font-weight: bold;        
-            // margin-left: 100px;
+            font-weight: bold;
         }
     
         h2{
@@ -216,7 +116,7 @@
         }
     
         .form-CreateGroup{
-            display: flex;
+            // display: flex;
             align-items: center;
             width: 500px;
         }
@@ -229,12 +129,21 @@
     
         .CreateButton{
             width: 150px;
+            margin-top: 0;
         }
     
     
         .CancelButton{
             width: 150px;
         }
-    
+
+        .memberRole{
+            display: flex;
+            flex-direction: row;
+        }
+
+        #role{
+            width: 220px;
+        }
     } 
 }
