--- a/html/style/sass/about/_aboutView.scss
+++ b/html/style/sass/about/_aboutView.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     box-sizing: border-box;
     align-items: center;
-    justify-content: center;
     gap: 1em;
 }
 
@@ -20,14 +19,13 @@
     margin-top: 1em;
 }
 
-.about div>*:not(a) {
+.about div>*{
     width: 100%;
 }
 
 @media screen and (min-width: 500px) {
 
     .about div {
-        flex-direction: column;
         gap: 2em;
     }
 
