--- a/html/style/sass/_charteGraphique.scss
+++ b/html/style/sass/_charteGraphique.scss
@@ -29,9 +29,10 @@ h3{
     font-weight: 500;
 }
 
-p{
+p, textarea{
     font-size: 16px;
     font-weight: 400;
+    line-height: 22px;
 }
 
 .p-secondary{
