--- a/html/style/sass/group/_groupCreate.scss
+++ b/html/style/sass/group/_groupCreate.scss
@@ -22,7 +22,7 @@
         
     }
     
-    #memberName{
+    #memberEmail{
         height: 30px;
         display: flex;
         margin-top: 10px;
