--- a/html/style/sass/profile/_profileView.scss
+++ b/html/style/sass/profile/_profileView.scss
@@ -2,24 +2,68 @@
     padding: 45px 20px; 
     display: flex;
     flex-direction: column;
-    gap: 25px 0px;
+    gap: 20px;
 
-    .list-galery{
+    .list{
         overflow-x: scroll;
         padding: 10px;
         
         display: flex;
         gap: 20px;
         
-        .galery{
+        .gallery{
+            position: relative;
             min-width: 300px;
             height: 200px;
-            background-color: blue;
+            background-color: $color-input;
+            border-radius: 4px;
+            overflow: hidden;
+
+            &.create{
+                span{
+                    display: flex;
+                    color: $color-contrastBlack;
+                    font-size: 50px;
+                }
+            }
 
             img{
                 width: 300px;
                 height: 200px;    
                 object-fit: cover;
+            }
+
+            span{
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: none;
+                justify-content: center;
+                align-items: center;
+                width: 300px;
+                height: 200px;
+                backdrop-filter: blur(5px);
+                color: $color-contrastWhite;
+            }
+
+            &:hover span{
+                display: flex;
+                background-color: rgba(0,0,0,0.5);
+            }
+
+        }
+
+        .group{
+            position: relative;
+            background-color: $color-input;
+            border-radius: 4px;
+            overflow: hidden;
+
+            span{
+                display: flex;
+                color: $color-contrastBlack;
+                font-size: 20px;
+                padding: 10px 15px;
             }
         }
     }
