--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -87,7 +87,7 @@ p, textarea {
   font-weight: 400;
 }
 
-input, select, button {
+input, select, button, textarea {
   border: none;
   border-radius: 4px;
   height: 30px;
@@ -100,13 +100,6 @@ input {
   font-weight: 400;
   width: 190px;
   color: #0B162C;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 20px;
 }
 
 nav {
@@ -153,127 +146,14 @@ nav > i {
   color: #F4F4F4;
   font-size: 20px;
 }
-nav .top {
+nav:not(.active) .top {
   display: none;
 }
-nav .list-items {
+nav:not(.active) i[class="bi bi-plus-lg"] {
   display: none;
 }
-nav i[class="bi bi-plus-lg"] {
+nav:not(.active) .list-items {
   display: none;
-}
-nav #dropdownNav {
-  display: none;
-}
-@media screen and (min-width: 570px) {
-  nav .top {
-    display: flex;
-  }
-}
-@media screen and (min-width: 1180px) {
-  nav .mediaquery {
-    display: none;
-  }
-  nav .list-items {
-    display: flex;
-    color: #F4F4F4;
-    align-items: center;
-    gap: 30px;
-  }
-  nav .list-items h2 {
-    font-size: 18px;
-    font-weight: 500px;
-  }
-  nav .list-items h2#login {
-    width: 150px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    background-color: #F4F4F4;
-    color: #0B162C;
-  }
-  nav .list-items h2#register {
-    width: 150px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    background-color: #16CFE9;
-    color: #0B162C;
-  }
-  nav i[class="bi bi-list"] {
-    display: none;
-  }
-  nav #dropdownNav {
-    position: relative;
-    display: block;
-  }
-  nav #dropdownNav img {
-    border-radius: 100%;
-    height: 50px;
-    aspect-ratio: 1/1;
-    object-fit: cover;
-  }
-  nav #dropdownNav .dropdown-content {
-    position: absolute;
-    top: 80px;
-    left: -65px;
-    background-color: #F4F4F4;
-    min-width: 160px;
-    border-radius: 4px;
-  }
-  nav #dropdownNav .dropdown-content .items {
-    z-index: 2;
-    overflow: hidden;
-    height: 0px;
-    transition: height 0.3s ease-in-out 0.2s;
-  }
-  nav #dropdownNav .dropdown-content .items a {
-    color: #0B162C;
-    text-align: center;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    transition: background-color 0.1s ease-in-out;
-  }
-  nav #dropdownNav .dropdown-content .items a:hover {
-    background-color: #16CFE9;
-  }
-  nav #dropdownNav .dropdown-content::before {
-    content: "";
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: block;
-    width: 15px;
-    height: 0px;
-    background-color: #F4F4F4;
-    clip-path: polygon(50% 0, 100% 100%, 0 100%);
-    z-index: -1;
-    transition: height 0.1s ease-in-out 0.4s;
-  }
-  nav #dropdownNav:hover .dropdown-content::before, nav #dropdownNav .items:hover::before {
-    height: 15px;
-    transition: height 0s ease-in-out 0s;
-  }
-  nav #dropdownNav:hover .dropdown-content .items, nav #dropdownNav:hover .dropdown-content .items:hover, nav #dropdownNav .items:hover .items, nav #dropdownNav .items:hover .items:hover {
-    height: 120px;
-    transition: height 0.3s ease-in-out 0s;
-  }
 }
 nav.active {
   position: fixed;
@@ -282,12 +162,12 @@ nav.active {
   background-color: #0B162C;
   display: flex;
   flex-direction: column;
+  z-index: 9999;
 }
 nav.active > i[class="bi bi-list"] {
   display: none;
 }
 nav.active i[class="bi bi-plus-lg"] {
-  display: block;
   color: #F4F4F4;
   position: absolute;
   top: 20px;
@@ -304,23 +184,31 @@ nav.active .top {
   width: 100%;
 }
 nav.active .top form {
+  display: flex;
   flex-direction: column;
   gap: 15px;
-  width: 100%;
-  max-width: calc(100% - 50px);
 }
 nav.active .top form select {
-  width: 100%;
+  background-color: #16CFE9;
+  max-width: 230px;
+  font-size: 14px;
   text-align: center;
-  border-radius: 4px;
 }
 nav.active .top form .search {
+  max-width: 230px;
+  border: none;
+  border-radius: 5px;
   color: #F4F4F4;
+  display: flex;
+}
+nav.active .top form .search button {
+  background-color: #16CFE9;
+  border-radius: 0px 4px 4px 0px;
+  width: 40px;
 }
 nav.active .top form .search input {
+  background-color: #F4F4F4;
   border-radius: 4px 0px 0px 4px;
-  max-width: calc(100% - 40px);
-  width: 100%;
 }
 nav.active .list-items {
   width: 100%;
@@ -394,7 +282,6 @@ nav.active .list-items h2 {
   flex-direction: column;
   box-sizing: border-box;
   align-items: center;
-  justify-content: center;
   gap: 1em;
 }
 
@@ -423,13 +310,12 @@ nav.active .list-items h2 {
   margin-top: 1em;
 }
 
-.about div > *:not(a) {
+.about div > * {
   width: 100%;
 }
 
 @media screen and (min-width: 500px) {
   .about div {
-    flex-direction: column;
     gap: 2em;
   }
   .about div div {
@@ -566,6 +452,670 @@ nav.active .list-items h2 {
     width: 100%;
   }
 }
+body.no-scroll {
+  overflow: hidden;
+}
+
+article {
+  width: 100%;
+}
+article #CreateGalery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+article #CreateGalery form {
+  width: 90%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+article #CreateGalery form > div:first-child {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  article #CreateGalery form > div:first-child {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    gap: 20px;
+  }
+  article #CreateGalery form > div:first-child .group {
+    width: 100%;
+    max-width: 50%;
+  }
+  article #CreateGalery form > div:first-child .images-list {
+    background-color: #0B162C;
+    border-radius: 4px;
+    max-height: 221px;
+    overflow-y: auto;
+    padding: 10px 15px;
+    color: #F4F4F4;
+  }
+  article #CreateGalery form > div:first-child .images-list .image-file {
+    color: #0B162C;
+    height: 50px;
+  }
+  article #CreateGalery form > div:first-child .images-list .image-file img {
+    display: block;
+    height: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+  article #CreateGalery form > div:first-child .modal.active .card .body img {
+    display: block;
+    max-width: 100%;
+    max-height: 300px;
+    object-fit: scale-down;
+    border-radius: 4px;
+  }
+}
+article #CreateGalery form > div:first-child .group {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+article #CreateGalery form .form-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+article #CreateGalery form .form-group select {
+  background-color: #D9D9D9;
+  color: #0B162C;
+  padding-left: 10px;
+}
+article #CreateGalery form .form-group input {
+  width: 100%;
+}
+article #CreateGalery form .form-group input[type=file] {
+  display: none;
+}
+article #CreateGalery form .form-group label[for=imagesUpload] {
+  height: 35px;
+  background: #D9D9D9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  font-size: 25px;
+}
+article #CreateGalery form .form-group label[for=imagesUpload]:hover {
+  background-color: #0B162C;
+  color: #F4F4F4;
+}
+article #CreateGalery form .form-group label[for=images-list] ~ span {
+  font-size: 12px;
+}
+article #CreateGalery form .form-group .images-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+}
+article #CreateGalery form .form-group .images-list > p {
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+}
+article #CreateGalery form .form-group .images-list .image-file {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 15px;
+  width: 100%;
+  height: 30px;
+  background: #D9D9D9;
+  border-radius: 4px;
+  gap: 10px;
+}
+article #CreateGalery form .form-group .images-list .image-file img {
+  display: none;
+}
+article #CreateGalery form .form-group .images-list .image-file p {
+  flex-grow: 1;
+  font-size: 14px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+article #CreateGalery form .form-group .images-list .image-file .image-actions {
+  width: 40px;
+  display: flex;
+  justify-content: flex-end;
+}
+article #CreateGalery form .form-group .images-list .image-file .image-actions i {
+  font-size: 18px;
+  cursor: pointer;
+}
+article #CreateGalery form .form-group .images-list .image-file .image-actions i:nth-child(1) {
+  color: #0B162C;
+}
+article #CreateGalery form .form-group .images-list .image-file .image-actions i:nth-child(2) {
+  color: #BF4040;
+}
+article #CreateGalery form .form-group textarea {
+  height: 90px;
+  background: #D9D9D9;
+  padding: 10px;
+  font-size: 14px;
+}
+article #CreateGalery form .list-button {
+  width: 100%;
+}
+article #CreateGalery form .list-button button {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: opacity 0.2s ease-in-out;
+}
+article #CreateGalery form .list-button button[disabled] {
+  opacity: 40%;
+  color: #c1c1c1;
+  cursor: not-allowed;
+}
+article #CreateGalery form .list-button a {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C;
+}
+article #CreateGalery form .modal {
+  display: none;
+}
+article #CreateGalery form .modal.active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(11, 22, 44, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+article #CreateGalery form .modal.active .card {
+  width: 95%;
+  max-width: 640px;
+  background-color: #F4F4F4;
+  padding: 10px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+article #CreateGalery form .modal.active .card .header {
+  width: 100%;
+}
+article #CreateGalery form .modal.active .card .header hr {
+  border-top: none;
+  border-width: 1px;
+  color: #0B162C;
+}
+article #CreateGalery form .modal.active .card .body {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 20px;
+  width: 85%;
+}
+article #CreateGalery form .modal.active .card .body img {
+  display: none;
+}
+article #CreateGalery form .modal.active .card .body .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+article #CreateGalery form .modal.active .card .body .form .form-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+article #CreateGalery form .modal.active .card .body .form .form-group label {
+  font-size: 14px;
+}
+article #CreateGalery form .modal.active .card .body .form .form-group input {
+  height: 35px;
+  background: #D9D9D9;
+  padding: 10px;
+  font-size: 14px;
+}
+article #CreateGalery form .modal.active .card .body .footer {
+  display: flex;
+  justify-content: flex-end;
+}
+article #CreateGalery form .modal.active .card .body .footer button[dataModal=valider] {
+  width: 100px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+}
+article #CreateGalery form .modal.active .card .body .footer button[dataModal=annuler] {
+  width: 100px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C;
+}
+
+#CreateGalery.formatEdit h2 {
+  margin-top: 60px;
+}
+#CreateGalery.formatEdit h2:first-child {
+  margin-top: 0;
+}
+#CreateGalery.formatEdit form.oldPicture .form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+#CreateGalery.formatEdit form.oldPicture .form-group button[type=submit] {
+  height: auto;
+  background-color: transparent;
+  padding: 0 4px;
+}
+#CreateGalery.formatEdit form.oldPicture .form-group button[type=submit] i[class="bi bi-x-lg"] {
+  color: #BF4040;
+}
+#CreateGalery.formatEdit div.ManageMember {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+#CreateGalery.formatEdit div.ManageMember > div {
+  margin-top: 20px;
+  flex-grow: 1;
+}
+#CreateGalery.formatEdit div.ManageMember > div h3 {
+  text-align: center;
+}
+#CreateGalery.formatEdit div.ManageMember > div .box {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+#CreateGalery.formatEdit div.ManageMember > div .box form {
+  display: flex;
+  flex-direction: row;
+  background-color: #D9D9D9;
+  justify-content: space-between;
+  height: 30px;
+  align-items: center;
+  padding: 5px 15px;
+  border-radius: 4px;
+  margin-top: 0;
+}
+#CreateGalery.formatEdit div.ManageMember > div .box form button[type=submit] {
+  height: auto;
+  background-color: transparent;
+  padding: 0 4px;
+}
+#CreateGalery.formatEdit div.ManageMember > div .box form button[type=submit] i {
+  font-size: 18px;
+  color: #0B162C;
+  cursor: pointer;
+}
+#CreateGalery.formatEdit div.ManageMember > div .box form button[type=submit] i[class="bi bi-x-lg"] {
+  color: #BF4040;
+}
+
+#CreateGroup .CreateButton {
+  width: 220px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-top: 22px;
+}
+#CreateGroup .CancelButton {
+  width: 220px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C;
+  display: flex;
+  margin-top: 8px;
+}
+#CreateGroup #nameGroup {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+#CreateGroup .form-nameGroup {
+  margin-top: 18px;
+}
+#CreateGroup #memberEmail {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+#CreateGroup .form-nameMember {
+  margin-top: 25px;
+}
+#CreateGroup .form-CreateGroup {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+#CreateGroup .formul {
+  margin: auto;
+}
+#CreateGroup .form-CreateGroup input {
+  width: 219px;
+}
+#CreateGroup .buttons {
+  margin-top: 10px;
+  margin: auto;
+}
+#CreateGroup #info {
+  margin-bottom: 20px;
+}
+#CreateGroup h2, #CreateGroup h3 {
+  text-align: center;
+}
+#CreateGroup .form-role label {
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+#CreateGroup .form-role {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1000px) {
+  #CreateGroup .formul {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+    width: 100%;
+  }
+  #CreateGroup .buttons {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+  }
+  #CreateGroup .CancelButton {
+    margin-left: 30px;
+    margin-top: 0;
+  }
+  #CreateGroup .form-nameGroup {
+    width: 50%;
+    margin-right: 30px;
+  }
+  #CreateGroup .form-nameMember {
+    width: 50%;
+    margin-left: 15px;
+  }
+  #CreateGroup h3 {
+    font-weight: bold;
+  }
+  #CreateGroup h2 {
+    margin-bottom: 50px;
+  }
+  #CreateGroup .form-CreateGroup {
+    align-items: center;
+    width: 500px;
+  }
+  #CreateGroup .header {
+    display: flex;
+    flex-direction: row;
+  }
+  #CreateGroup .CreateButton {
+    width: 150px;
+    margin-top: 0;
+  }
+  #CreateGroup .CancelButton {
+    width: 150px;
+  }
+  #CreateGroup .memberRole {
+    display: flex;
+    flex-direction: row;
+  }
+  #CreateGroup #role {
+    width: 220px;
+  }
+}
+
+#ModifyGroup .SaveButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-top: 12px;
+}
+#ModifyGroup .DeleteButton {
+  width: 219px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #BF4040;
+  color: #F4F4F4;
+  margin: auto;
+}
+#ModifyGroup .CreateButton {
+  width: 220px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
+  margin-top: 22px;
+}
+#ModifyGroup .CancelButton {
+  width: 220px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #D9D9D9;
+  color: #0B162C;
+  display: flex;
+  margin-top: 8px;
+}
+#ModifyGroup #nameGroup {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+#ModifyGroup .form-nameGroup {
+  margin-top: 18px;
+}
+#ModifyGroup #memberName {
+  height: 30px;
+  display: flex;
+  margin-top: 10px;
+}
+#ModifyGroup .form-nameMember {
+  margin-top: 25px;
+}
+#ModifyGroup .form-Group {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+#ModifyGroup .formul {
+  margin: auto;
+}
+#ModifyGroup .form-Group input {
+  width: 219px;
+}
+#ModifyGroup .buttons {
+  margin-top: 10px;
+  margin: auto;
+}
+#ModifyGroup #info {
+  margin-bottom: 20px;
+}
+#ModifyGroup h2, #ModifyGroup h3 {
+  text-align: center;
+}
+#ModifyGroup h2 {
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+#ModifyGroup h3 {
+  font-weight: bold;
+  margin-top: 25px;
+}
+#ModifyGroup .form-role {
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+#ModifyGroup .form-role {
+  display: flex;
+  flex-direction: column;
+}
+#ModifyGroup #memberEmail {
+  margin-top: 10px;
+  display: flex;
+}
+@media (min-width: 1000px) {
+  #ModifyGroup .formul {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+    width: 100%;
+  }
+  #ModifyGroup .buttons {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+  }
+  #ModifyGroup .CancelButton {
+    margin-left: 30px;
+    margin-top: 0;
+  }
+  #ModifyGroup .form-nameGroup {
+    width: 50%;
+    margin-right: 30px;
+  }
+  #ModifyGroup .form-nameMember {
+    width: 50%;
+    margin-left: 15px;
+    margin-top: 15px;
+  }
+  #ModifyGroup .form-Group {
+    align-items: center;
+    width: 500px;
+  }
+  #ModifyGroup .header {
+    display: flex;
+    flex-direction: column;
+  }
+  #ModifyGroup .SaveButton {
+    width: 150px;
+    margin-top: 0;
+  }
+  #ModifyGroup .CancelButton {
+    width: 150px;
+  }
+  #ModifyGroup .memberRole {
+    display: flex;
+    flex-direction: row;
+  }
+  #ModifyGroup #role {
+    width: 220px;
+  }
+  #ModifyGroup .form-role {
+    width: 50%;
+  }
+}
+
 #picture {
   z-index: 0;
   padding: 20px;
